# chat

./: Cargo.toml  flake.nix  sqlite.db
src/client/: client.rs  tui.rs
src/server/: server.rs
