[package]
name = "chat"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "chat-server"
path = "src/server/server.rs"

[[bin]]
name = "chat-client"
path = "src/client/client.rs"


[dependencies]
actix-web = "4.7.0"
clap = { version = "4.5.7", features = ["derive"] }
crossterm = "0.27.0"
futures = "0.3.30"
ratatui = "0.26.3"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.38.0", features = ["full"] }
